Make date/duration checkbox toggle switch Make input fields all have consistent width Align shorten button correctly and raise min-width Add margin between advanced mode input fields
Fixes #17
Fixes #16
Fixes #13

--- a/website/style.css
+++ b/website/style.css
@@ -41,34 +41,15 @@ body {
     text-decoration-color: initial;
     vertical-align: bottom;
     margin-bottom: 0;
-    min-width: 10%;
+    min-width: 20%;
     position: relative;
-    background-image: initial;
-    height: 5vh;
-}
-
-#date_toggle {
-    border: 1px solid transparent;
-    text-align: center;
-    cursor: pointer;
-    border-radius: 6px;
-    transition: background 100ms linear;
-    text-decoration: none;
-    font-size: 20px;
-    line-height: 1.11;
-    padding: 10px;
-    text-decoration-color: initial;
-    vertical-align: bottom;
-    margin-bottom: 0;
-    min-width: 10%;
-    position: relative;
+    top: -2px;
     background-image: initial;
     height: 5vh;
 }
 
 #duration {
-    text-align: right;
-    /* caret-color: transparent; */
+    text-align: left;
 }
 
 /* shortening mode colors */
@@ -145,10 +126,12 @@ body {
     border-radius: 8px;
     font-size: 20px;
     padding: 0 20px;
+    margin: 1px 0;
     background-color: var(--background-color);
     border: 1px solid rgb(94, 101, 103);
     color: rgb(255, 255, 255);
     height: 5vh;
+    width: 12.5vw;
 }
 
 /* Remove the increment/decrement buttons/arrows from numberfields */
@@ -163,7 +146,7 @@ input[type=number] {
     -moz-appearance: textfield;
 }
 
-#advanced_mode_outer {
+#advanced_mode_toggle_outer {
     margin-top: 5px;
     margin-bottom: 5px;
 }
